# graft

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  _typos.toml  install.sh  justfile  sqlpkg.json
.github/workflows/: benchmark.yml  ci.yml  docs-check.yml  release-prep.yml  sqlite-extension-release.yml
crates/fjall/: .cargo_vcs_info.json  Cargo.toml
crates/fjall/src/tx/single_writer/: mod.rs
crates/graft/: Cargo.toml
crates/graft-bench/: Cargo.toml  README.md
crates/graft-bench/src/: compare.rs  lib.rs  main.rs  model.rs  runner.rs
crates/graft-ext/: Cargo.toml
crates/graft-ext/src/: lib.rs
crates/graft-sqlite/: Cargo.toml
crates/graft-sqlite/src/: file.rs  json.rs  lib.rs  pragma.rs  register.rs  row_level_diff.rs  row_merge.rs  sql_diff.rs  sqlite_parse.rs  vfs.rs
crates/graft-sqlite/src/file/: vol_file.rs
crates/graft-sqlite/src/pragma/: jobs.rs  json.rs  output_types.rs  parse.rs  repo_checkout.rs  repo_conflicts.rs  repo_core.rs  repo_diff.rs  repo_history.rs  repo_merge.rs  repo_output.rs  repo_paths.rs  repo_refs.rs  repo_remote_output.rs  repo_snapshot.rs  repo_staging.rs  repo_switch.rs  repo_sync.rs  row_diff.rs  row_merge_output.rs  spec.rs  tests.rs  volume_output.rs
crates/graft-test/: Cargo.toml
crates/graft-test/src/: lib.rs  workload.rs
crates/graft-test/tests/: remote_commit_faults.rs  sqlite.rs  verify_snapshot.rs  verify_soft_truncate.rs
crates/graft-tool/: Cargo.toml
crates/graft-tool/src/: main.rs
crates/graft-tool/tests/: commit.rs  diff_content.rs
crates/graft-tracing/: Cargo.toml
crates/graft/src/: core.rs  err.rs  lib.rs  remote.rs  remote_wasm.rs  repo.rs  setup.rs  volume_writer.rs
crates/graft/src/core/: checksum.rs  commit.rs  commit_hash.rs  gid.rs  lsn.rs  pageset.rs  pageset_wasm.rs
crates/graft/src/local/: fjall_storage.rs
crates/graft/src/local/fjall_storage/: fjall_typed.rs  keys.rs  values.rs
crates/graft/src/remote/: segment.rs
crates/graft/src/repo/: artifacts.rs  config.rs  config_methods.rs  history.rs  index.rs  inventory.rs  merge.rs  object.rs  refs.rs  refspec.rs  remote_objects.rs  staging.rs  sync.rs  tests.rs  worktree.rs  worktree_state.rs
crates/graft/src/rt/: action.rs  runtime.rs
crates/graft/src/rt/action/: remote_commit.rs  snapshot_push.rs
crates/sqlite-plugin/: build.rs
docs/: astro.config.mjs  design.md  hosting.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sqlite.md  wrangler.toml
docs/public/: _headers  robots.txt
docs/public/playground/: index.html
docs/scripts/: embed-playground.mjs
docs/src/components/: RfcInfo.astro
docs/src/config/: docsearch.ts  redirects.ts  sidebar.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/docs/concepts/: app-state-versioning.mdx  branches-and-remotes.mdx  file-artifacts.mdx  repository-model.mdx  row-diffs-and-merge-policy.mdx  sqlite-snapshots.mdx
docs/src/content/docs/docs/guides/: diff-rows-and-files.mdx  export-sqlite.mdx  external-payloads.mdx  history-and-restore.mdx  http-remote.mdx  json-ui.mdx  merge-conflicts.mdx  sync-remotes.mdx  track-databases-and-files.mdx
docs/src/content/docs/docs/internals/: architecture.mdx  http-remote-protocol.mdx  object-formats.mdx  row-diff-engine.mdx  snapshot-storage-lsns.mdx
docs/src/content/docs/docs/overview/: installation.mdx  status.mdx  what-is-graft.mdx
docs/src/content/docs/docs/quickstart/: app-state-walkthrough.mdx  cli.mdx  playground.mdx  sqlite-extension.mdx
docs/src/content/docs/docs/reference/: cli.mdx  configuration.mdx  glossary.mdx  json-output.mdx  merge-policy.mdx  pragmas.mdx  remote-uris.mdx  troubleshooting.mdx
docs/src/content/docs/docs/sqlite/: pragmas.mdx
docs/src/content/docs/zh/: 404.mdx  index.mdx
docs/src/content/docs/zh/docs/concepts/: app-state-versioning.mdx  branches-and-remotes.mdx  file-artifacts.mdx  repository-model.mdx  row-diffs-and-merge-policy.mdx  sqlite-snapshots.mdx
docs/src/content/docs/zh/docs/guides/: diff-rows-and-files.mdx  export-sqlite.mdx  external-payloads.mdx  history-and-restore.mdx  http-remote.mdx  json-ui.mdx  merge-conflicts.mdx  sync-remotes.mdx  track-databases-and-files.mdx
docs/src/content/docs/zh/docs/internals/: architecture.mdx  http-remote-protocol.mdx  object-formats.mdx  row-diff-engine.mdx  snapshot-storage-lsns.mdx
docs/src/content/docs/zh/docs/overview/: installation.mdx  status.mdx  what-is-graft.mdx
docs/src/content/docs/zh/docs/quickstart/: app-state-walkthrough.mdx  cli.mdx  playground.mdx  sqlite-extension.mdx
docs/src/content/docs/zh/docs/reference/: cli.mdx  configuration.mdx  glossary.mdx  json-output.mdx  merge-policy.mdx  pragmas.mdx  remote-uris.mdx  troubleshooting.mdx
docs/src/pages/r/: [code].astro
docs/src/plugins/: llmify.ts
docs/src/styles/: global.css
scripts/: build-web-demo-wasm.sh
tasks/: release  tool
tasks/sqlite/: shell  test
tests/sql/: test_graft_sanity.sql  test_graft_sanity.sql.expected  test_info_pragmas.sql  test_info_pragmas.sql.expected  test_legacy_volume_pragmas.sql  test_legacy_volume_pragmas.sql.expected  test_lock_basic.sql  test_lock_basic.sql.expected  test_repo_pragmas.sql  test_repo_pragmas.sql.expected
web-demo/: .gitignore  README.md  e2e.html  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web-demo/src/: App.tsx  graft.worker.ts  i18n.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
web-demo/src/components/: BinaryDiffPane.tsx  CommitFilesPane.tsx  ConflictResolver.tsx  DiffPane.tsx  EditorPane.tsx  ExplorerPane.tsx  QuickstartGuide.tsx  ResetDialog.tsx  ResizeHandle.tsx  SqliteDiffPane.tsx  SqliteEditor.tsx  TerminalPanel.tsx  VersionPanel.tsx
web-demo/src/lib/: graftClient.ts  history.test.mjs  history.ts  opfs.ts
web-demo/tests/e2e/: playground-ui.spec.ts  workspace-switch.spec.ts
