[package]
name = "graft-bench"
version = "0.0.0"
edition = "2024"
publish = false
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tempfile = { workspace = true }

[lints]
workspace = true
