[package]
name = "graft-test"
version = "0.5.2"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
graft = { path = "../graft", features = ["testutil", "precept"] }
graft-sqlite = { path = "../graft-sqlite" }
graft-tracing = { path = "../graft-tracing" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
file-lock = { workspace = true }
opendal = { workspace = true }
precept = { workspace = true, features = ["antithesis", "enabled"] }
rand = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "functions"] }
serde_json = "1.0"
sqlite-plugin = { workspace = true, features = ["static"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
