[package]
name = "graft-tool"
version = "0.5.2"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
autobins = false

[[bin]]
name = "graft"
path = "src/main.rs"

[dependencies]
graft = { path = "../graft" }
graft-sqlite = { path = "../graft-sqlite", features = ["register-static"] }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rusqlite = { workspace = true, features = ["bundled"] }
tempfile = { workspace = true }

[dev-dependencies]
serde_json = "1.0"

[lints]
workspace = true
