[package]
name = "graft"
version = "0.5.8"
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

description = "The Graft storage engine."

[lints]
workspace = true

[dependencies]
assert_matches = { workspace = true }
base64 = { workspace = true }
bilrost = { workspace = true, features = ["bytestring", "thin-vec"] }
blake3 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
bytestring = { workspace = true }
circular-buffer = { workspace = true }
fjall = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
lz4_flex = { workspace = true }
parking_lot = { workspace = true }
precept = { workspace = true, optional = true }
rand = { workspace = true }
range-set-blaze = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
static_assertions = { workspace = true }
tempfile = { workspace = true }
text_trees = { workspace = true }
thin-vec = { workspace = true }
thiserror = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tryiter = { workspace = true }
xxhash-rust = { workspace = true }
zerocopy = { workspace = true }
zstd = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
opendal = { workspace = true, features = [
    "reqwest-rustls-tls",
    "executors-tokio",
    "layers-concurrent-limit",
    "layers-logging",
    "layers-retry",
    "layers-timeout",
    "services-s3",
    "services-fs",
] }
reqwest = { workspace = true }
splinter-rs = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time", "parking_lot"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
assert_matches = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
test-log = { workspace = true, features = ["trace"] }

[features]
default = []
testutil = []
precept = ["dep:precept"]
